fix(#74): Introduce JsfTestSetup as non-deprecated replacement for @JsfTestConfiguration bound (#108)
## Summary

Introduces `JsfTestSetup` as a non-deprecated replacement for the
`JsfTestContextConfigurator` hierarchy in the `@JsfTestConfiguration`
context.

`@JsfTestConfiguration.value()` previously required `Class<? extends
JsfTestContextConfigurator>[]`, but `JsfTestContextConfigurator` and all
three of its sub-interfaces (`ApplicationConfigurator`,
`ComponentConfigurator`, `RequestConfigurator`) were `@Deprecated`. This
forced every `@JsfTestConfiguration` consumer to add
`@SuppressWarnings("java:S1874")` just to reference the configurator
types in the annotation value.

The change introduces `JsfTestSetup` as the new non-deprecated
annotation bound with three default no-op methods
(`configureApplication`, `configureComponents`, `configureRequest`),
re-parents the legacy sub-interfaces onto `JsfTestSetup` for backward
compatibility, and migrates `BasicApplicationConfiguration` to implement
`JsfTestSetup` directly.

## Changes

- `src/main/java/de/cuioss/test/jsf/config/JsfTestSetup.java` — new
non-deprecated interface with three default methods matching the
decorator signatures
- `src/main/java/de/cuioss/test/jsf/config/ApplicationConfigurator.java`
— re-parented: `extends JsfTestSetup` (was `extends
JsfTestContextConfigurator`), added `@Override`
- `src/main/java/de/cuioss/test/jsf/config/ComponentConfigurator.java` —
re-parented: `extends JsfTestSetup`, added `@Override`
- `src/main/java/de/cuioss/test/jsf/config/RequestConfigurator.java` —
re-parented: `extends JsfTestSetup`, added `@Override`
- `src/main/java/de/cuioss/test/jsf/config/JsfTestConfiguration.java` —
annotation bound changed to `Class<? extends JsfTestSetup>[]`
- `src/main/java/de/cuioss/test/jsf/config/JsfTestSetup.java` — new
interface
- `src/main/java/de/cuioss/test/jsf/util/ConfigurationHelper.java` —
broadened dispatch: bare `JsfTestSetup` implementors now have all three
default methods in